@startuml classdiag

class Server {

  register_suricate(suricate_id)
  unregister_suricate(suricate_id)
  register_watcher(watcher_id)
  unregister_watcher(watcher_id)
  add_watcher_to_suricate(suricate_id, watcher_id)
  remove_watcher_from_suricate(suricate_id, watcher_id)
}

class WatcherCmdNS {
  on_joystick_state(data)
  on_joystick_move(data)
}

class Suricate {

  id
  suricate_video_stream_sid
  suricate_cmd_sid
  
  add_watcher(watcher_id)
  remove_watcher(watcher_id)

  do_start_cam_ctrl_evt()
  do_stop_cam_ctrl_evt()
  do_move_cam_evt()
}

class Watcher {
  id
  watcher_cmd_sid
  watcher_video_cast_sid
  watched_suricate

  watch_suricate(suricate_id)
  unwatch_suricate()

  start_cam_ctrl_evt()
  stop_cam_ctrl_evt()
  move_cam_evt()
}

class CamController {
  states
  transitions

  evt_start_cam_ctrl()
  evt_stop_cam_ctrl()
  evt_move_cam()

  start_cam_ctrl()
  stop_cam_ctrl()
  move_cam()  
}



class Machine {

}


Server o-- Suricate
Server o-- Watcher
Server --> WatcherCmdNS


Watcher "watched_suricate" --> Suricate
Watcher "server" --> Server
Watcher --> CamController


Suricate o-- Watcher

WatcherCmdNS --> Server

CamController --> Machine
CamController --> Suricate


@enduml